require passing profile.
